--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "start-server": "node app.js"
   },
   "repository": {
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/Yaambs18/Group-Chat-App#readme",
   "dependencies": {
+    "aws-sdk": "^2.1343.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.29.3",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "cors": "^2.8.5",
